--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ngram-getter",
   "version": "1.0.0",
-  "description": "Does some cool things.",
-  "main": "index.js",
+  "description": "This is an ad hoc programmatic interface to the Google Books Ngram Viewer.",
+  "main": "get-ngrams.js",
   "scripts": {
     "test": "make test"
   },
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "cheerio": "^0.19.0",
+    "lodash": "^3.10.0",
+    "nomnom": "^1.8.1",
     "request": "^2.60.0"
   }
 }
