--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "tape": "^4.13.0"
   },
   "dependencies": {
-    "cheerio": "^0.19.0",
+    "cheerio": "^1.0.0-rc.3",
     "defaults": "^1.0.3",
     "nomnom": "^1.8.1",
     "omit": "^1.0.1",
